[package]
name = "ipc-server-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }
regex = "1.12.2"
hex = "0.4.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
anyhow = "1.0.100"
chrono = "0.4.43"
solana-address = "2.0.0"
solana-sdk = "3.0.0"
solana-program = "3.0.0"
raydium-amm-swap = "0.1.21"
solana-signature = "3.1.0"
reqwest = { version = "0.13.1", features = ["json"] }
dotenv = "0.15.0"
solana-client = "3.1.8"


[profile.release]
# Aggressive optimization settings for maximum execution speed.
opt-level = 3
lto = true           # Link Time Optimization for smaller/faster binary.
codegen-units = 1    # Slower compilation, better optimization.
panic = "abort"      # Reduces binary size (no unwinding).
strip = "symbols"  
