[package]
name = "ipc-server-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }
regex = "1.12.2"
hex = "0.4.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
anyhow = "1.0.100"
chrono = "0.4.43"
solana-address = "2.0.0"
solana-sdk = "3.0.0"
solana-program = { version = "3.0.0"}
raydium-amm-swap = "0.1.21"
solana-signature = "3.1.0"
reqwest = { version = "0.13.1", features = ["json"] }
dotenv = "0.15.0"
solana-client = "3.1.8"
anchor-spl = "0.32.1"
spl-associated-token-account = { version = "8.0.0", features = ["no-entrypoint"] }
# solana-client-helpers = "1.1.0"
# solana-program-entrypoint = "3.1.1"

# spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }  # Added no-entrypoint


[profile.release]
opt-level = 3
lto = true           # Link Time Optimization for smaller/faster binary.
codegen-units = 1    # Slower compilation, better optimization.
panic = "abort"      # Reduces binary size (no unwinding).
strip = "symbols"  
